Fix hot drinks and change gap between each product

--- a/src/index.scss
+++ b/src/index.scss
@@ -271,6 +271,7 @@ h2 {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	gap: 60px;
 
 	.go-back-container {
 		position: absolute;
@@ -291,8 +292,10 @@ h2 {
 	}
 	h3 {
 		font-size: 40px;
-		margin-top: 40px;
 		margin-bottom: 20px;
+	}
+	.product {
+		// margin: 40px 0;
 	}
 }
 .product-container {
@@ -347,8 +350,13 @@ h2 {
 	}
 }
 .single-product {
-	margin: 40px 0;
 	align-items: start;
+	margin: 20px 0;
+
+	@media only screen and (max-width: 700px) {
+		align-items: center;
+		gap: 20px;
+	}
 }
 .single-product-info {
 	display: flex;
@@ -357,7 +365,7 @@ h2 {
 	width: 430px;
 
 	h3 {
-		margin-top: 0;
+		margin-bottom: 5px;
 	}
 	p {
 		color: white;
@@ -365,7 +373,7 @@ h2 {
 	span {
 		width: fit-content;
 		display: block;
-		margin-top: 25px;
+		margin-top: 20px;
 		background: $secondary-color;
 		color: white;
 		border-radius: 5px;
